# cosmwasm-playground

./: .envrc  .gitignore  .gitmodules  Cargo.toml  debug.sh  flake.nix  guide.md  shell.nix  start_testnet.sh
examples/: nameservice-example.wat
my-contracts/first-contrac/: Cargo.toml
my-contracts/first-contrac/src/: contract.rs
nix/wasmd/: default.nix
src/: main.rs
